Fixed padding for input fields (no margin-right between Twitter handle field and its button) -- also fixed the navbar when collapsed (have to remember that because the tweet cloud relies on <span>'s, need to add .bootstrapSpan class to the spans that Bootstrap requries

--- a/style.css
+++ b/style.css
@@ -43,4 +43,7 @@ span:not(.bootstrapSpan) {
 	display: none;
 }
 
+.inputField {
+	margin-right: 5px;
+}
 
